package={name='vector', version='0.0.0', edition='2024'}
lib={path='lib.rs'}

[features]
int_roundings=['num/int_roundings']
generic_const_exprs=[]
std=['num/std']
default=['std']

[dependencies]
num={git='https://github.com/Matthias-Fauconneau/num'}
bytemuck='*'
serde={version='*', optional=true, features=['derive']}
